# game-manager

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY.md  components.json  eslint.config.js  index.html  package.json  playwright.config.mjs  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: tauri-release-body.md
.github/workflows/: ci.yml  cleanup_old_releases.yml  release.yml
e2e/: helpers.ts  screenshots.spec.ts  smoke.spec.ts
scripts/: bump-tauri-version.mjs  ensure-playwright-port.mjs  pick-dev-port.mjs  playwright-screenshots.mjs  playwright-screenshots.test.ts  run-rust-coverage.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  nextest.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: dlss_d_presets.json  dlss_presets.json  dlss_static_manifest.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: .gitkeep  001_init.sql  002_allow_powershell7.sql  003_dlss.sql  004_dlss_detection_in_memory.sql  005_launch_script_runs.sql  006_play_sessions_game_id_index.sql
src-tauri/permissions/: .gitkeep  art.toml  dlss.toml  games.toml  groups.toml  launch.toml  logging.toml  scripts.toml  settings.toml
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/art/: cache.rs  mod.rs  steam.rs  steamgriddb.rs
src-tauri/src/commands/: art.rs  dlss.rs  games.rs  groups.rs  launch.rs  logging.rs  mod.rs  scripts.rs  settings.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/db/repo/: dlss.rs  games.rs  groups.rs  launch_runs.rs  logs.rs  mod.rs  scripts.rs  sessions.rs  settings.rs
src-tauri/src/dlss/: detect.rs  download.rs  elevation.rs  indicator.rs  manifest.rs  mod.rs  storage.rs  swap.rs
src-tauri/src/dlss/nvapi/: drs.rs  ffi.rs  mod.rs  presets.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/keep_awake/: mod.rs
src-tauri/src/launch/: cancel.rs  events.rs  executor.rs  mod.rs  resolver.rs  state_machine.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/monitor/: job_object.rs  mod.rs  named_process.rs  stub.rs
src-tauri/src/priority/: mod.rs
src-tauri/tests/: app_data_dir_integration.rs  art_commands_integration.rs  db_connection_integration.rs  db_error_paths_integration.rs  db_repositories_integration.rs  db_schema_integration.rs  dlss_detect_integration.rs  dlss_indicator_integration.rs  dlss_manifest_integration.rs  dlss_preset_logic_integration.rs  dlss_scan_progress_integration.rs  dlss_scan_status_integration.rs  dlss_state_repo_integration.rs  dlss_swap_integration.rs  games_commands_integration.rs  groups_commands_integration.rs  keep_awake_integration.rs  launch_commands_integration.rs  launch_executor_integration.rs  launch_orchestrator_integration.rs  launch_script_runs_integration.rs  logging_retention_integration.rs  logs_pagination_integration.rs  monitor_job_object_integration.rs  monitor_mode_selection_integration.rs  monitor_named_process_integration.rs  play_sessions_index_integration.rs  priority_integration.rs  resolver_commands_integration.rs  scripts_commands_integration.rs  scripts_repo_integration.rs  settings_commands_integration.rs  smoke_integration.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: steam-app-list.json  steamgriddb-grids.json  steamgriddb-search.json
src/components/layout/: app-layout.tsx  nav-items.ts  scroll-container-context.tsx  sidebar.tsx  top-bar.tsx  use-scroll-container.ts
src/components/theme/: theme-context.ts  theme-control.tsx  theme-provider.tsx
src/components/ui/: alert-dialog.tsx  badge-variants.ts  badge.tsx  button-variants.ts  button.tsx  code-editor.tsx  combobox.tsx  command.tsx  dialog.tsx  icon.tsx  input.tsx  popover.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  toaster.tsx  tooltip.tsx
src/features/dlss/: apply-to-all-dialog.tsx  apply-to-all-result-dialog.tsx  dll-version-combobox.tsx  dll-version-options.ts  dlss-elevation-banner.tsx  dlss-empty-state.tsx  dlss-management-page.tsx  dlss-pills.tsx  dlss-unsupported-callout.tsx  elevation-toast.ts  game-detail-dlss-tab.tsx  global-indicator-card.tsx  global-overrides-card.tsx  global-presets-card.tsx  preset-combobox.tsx
src/features/games/: add-game-wizard.tsx  currently-playing-hero.tsx  game-card-group-display.ts  game-card-groups.tsx  game-card.tsx  game-detail-groups-tab.tsx  game-detail-modal.tsx  game-detail-scripts-tab.tsx  game-edit-form.tsx  game-group-membership.tsx  game-script-assignment.tsx  library-format.ts  library-grid.tsx  library-route-content.tsx  library-states.tsx  library-toolbar.tsx  library-types.ts  playing-pip-timer.tsx  (+2 more)
src/lib/: app-log-commands.ts  asset-url.ts  format.ts  playwright-ipc-mock.ts  query-client.ts  router-future.ts  tauri-env.ts  theme-storage.ts  use-debounced-value.ts  utils.ts  virtual.ts
src/routes/: app-routes.tsx  dlss-route.tsx  groups-route.tsx  library-route.tsx  logs-route.tsx  route-placeholder.tsx  scripts-route.tsx  settings-route.tsx
src/stores/: launch-store.ts  toast-store.ts  ui-store.ts  update-store.ts
src/styles/: global.css
src/tests/: App.test.tsx  fixtures.ts  ipc-mock.test.ts  ipc-mock.ts  setup.ts
src/types/: dlss.ts  domain.ts  index.ts
(+136 files in other folders)
