[package]
name = "game-manager"
version = "2.2.0"
edition = "2021"
rust-version = "1.77"
license = "GPL-3.0-or-later"

[lib]
name = "game_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
test-utils = []

[build-dependencies]
tauri-build = { version = "~2.6.2", features = [] }

[dependencies]
tauri = { version = "~2.11.2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "~2.7.1"
tauri-plugin-prevent-default = "~4.0.4"
tauri-plugin-process = "~2.3.1"
tauri-plugin-updater = "~2.10.1"
tauri-plugin-window-state = "~2.4.0"
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.150"
thiserror = "~2.0.18"
strum = "~0.28.0"
strum_macros = "~0.28.0"
tracing = "~0.1.44"
tracing-subscriber = { version = "~0.3.23", features = ["env-filter", "fmt"] }
rusqlite = { version = "~0.32.1", features = ["bundled"] }
chrono = { version = "~0.4.45", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "~0.12.28", default-features = false, features = ["blocking", "json", "stream", "rustls-tls"] }
sha2 = "~0.10.9"
md-5 = "~0.10"
zip = { version = "~2.4", default-features = false, features = ["deflate"] }
futures-util = { version = "~0.3.32", default-features = false }
urlencoding = "~2.1.3"
tokio = { version = "~1.48.0", features = ["process", "rt", "rt-multi-thread", "macros", "sync", "time", "io-util"] }
async-trait = "~0.1.83"

[target.'cfg(windows)'.dependencies]
# WebView2-level enforcement (F12 / browser accelerator keys / dev tools).
tauri-plugin-prevent-default = { version = "~4.0.4", features = ["platform-windows"] }
# Process monitoring (Mode A job objects + completion port, Mode B ToolHelp
# snapshot + OpenProcess/WaitForSingleObject). Only the monitor module uses it.
windows = { version = "~0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_System_Power",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Registry",
] }

[dev-dependencies]
tempfile = "~3.27.0"
tauri = { version = "~2.11.2", features = ["test"] }
tokio = { version = "~1.48.0", features = ["process", "rt", "rt-multi-thread", "macros", "sync", "time", "io-util"] }

[lints.rust]
# `coverage` is a custom cfg set by the cargo-llvm-cov run to exclude the Tauri
# runtime entrypoint from instrumentation.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
